# linflex

./: .gitignore  .pre-commit-config.yaml  Docs.md  README.md  noxfile.py  pyproject.toml
.github/workflows/: publish.yml  run-tests.yml
linear_algebra/: __init__.py
linflex/: __init__.py  _annotations.py  _numerical_tools.py  _vec2.py  _vec2i.py  _vec3.py
src/linflex/: __init__.py  _annotations.py  _class_constant.py  _numerical_tools.py  _vec2.py  _vec2i.py  _vec3.py  typing.py
tests/: test_example.py  test_integrity.py  test_numerical_tools.py  test_vec2.py  test_vec2i.py  test_vec3.py
