[build-system]
requires = ["uv_build~=0.8.15"]
build-backend = "uv_build"

[project]
name = "linflex"
version = "0.3.1"
description = "A linear algebra package written in Python"
authors = [
    { name = "Havsalt", email = "77575424+Havsalt@users.noreply.github.com" }
]
dependencies = [
    "typing-extensions>=4.4.0",
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">= 3.10"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[project.urls]
Source = "https://github.com/havsalt/linflex.git"
