[build-system]
requires = ["uv_build~=0.8.15"]
build-backend = "uv_build"

[project]
name = "linflex"
version = "0.3.2"
description = "A linear algebra package written in Python"
authors = [
    { name = "Havsalt", email = "77575424+Havsalt@users.noreply.github.com" }
]
dependencies = [
    "typing-extensions>=4.4.0 ; python_version < '3.11'",
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">= 3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[project.urls]
Source = "https://github.com/havsalt/linflex.git"

[dependency-groups]
dev = [
    "ruff~=0.13.0",
    "pytest~=8.4",
]
