[build-system]
requires = ["uv_build~=0.11.0"]
build-backend = "uv_build"

[project]
name = "linflex"
version = "0.3.3"
description = "A linear algebra package written in Python"
authors = [
    { name = "Havsalt", email = "77575424+Havsalt@users.noreply.github.com" }
]
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.10"
keywords = [
    "math", "math-functions",
    "vector", "vec2", "vec3",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "typing-extensions>=4.4.0 ; python_version < '3.11'",
]

[dependency-groups]
dev = [
    "ruff~=0.13.0",
    "pytest~=8.4",
    "pydoc-markdown~=4.8",
    "pydoc-markdown-havsalt~=0.1.3",
    "nox>=2025.11.12",
    "nox-uv~=0.7.0",
]

[project.urls]
Homepage = "https://github.com/havsalt/linflex"
Repository = "https://github.com/havsalt/linflex"
Documentation = "https://github.com/havsalt/linflex/blob/main/Docs.md"
Issues = "https://github.com/havsalt/linflex/issues"
Changelog = "https://github.com/havsalt/linflex/blob/main/CHANGELOG.md" 

[[tool.pydoc-markdown.loaders]]
type = "python"
packages = ["linflex"]

[[tool.pydoc-markdown.processors]]
type = "pydoc_markdown_havsalt.ComposePublicExportsProcessor"

[[tool.pydoc-markdown.processors]]
type = "google"

[[tool.pydoc-markdown.processors]]
type = "filter"
do_not_filter_modules = false
skip_empty_modules = true

[tool.pydoc-markdown.renderer]
type = "pydoc_markdown_havsalt.RuffMarkdownRenderer"
filename = "Docs.md"
page_title = 'Documentation for `linflex`'
render_page_title = true
render_toc = true
insert_header_anchors = true
code_headers = true
descriptive_class_title = "Class "
descriptive_module_title = true
add_module_prefix = true
add_method_class_prefix = true

[tool.pydoc-markdown.renderer.header_level_by_type]
Module = 1
Function = 2
Class = 2
Variable = 3
Method = 3
